# FoxCode

./: .gitignore  Android App - Ярлык.lnk  Dijkstra’s algorithm.sln  README.md  Server.cpp  Simplified_Common_Diagram.drawio  main.cpp
Android App/: .gitignore  FoxMap.apk  ReadMe.txt  UML-Description.txt  Untitled Diagram.drawio
Android App/BomonSearch2/app/: build.gradle
Android App/BomonSearch2/app/src/main/: AndroidManifest.xml
Android App/BomonSearch2/gradle/wrapper/: gradle-wrapper.properties
Android App/FoxMap-Java_1/: local.properties
Android App/FoxMap-Java_1/app/: build.gradle
Android App/FoxMap-Java_1/app/src-bak/main/: AndroidManifest.xml
Android App/FoxMap-Java_1/app/src/main/: AndroidManifest.xml
Android App/FoxMap-Java_1/gradle/wrapper/: gradle-wrapper.properties
Android App/FoxMapNative_1/: gradle.properties
Android App/FoxMapNative_1/app/: build.gradle
Android App/FoxMapNative_1/app/debug/: app.aab
Android App/FoxMapNative_1/app/release/: app.aab
Android App/FoxMapNative_1/app/src/main/: AndroidManifest.xml
Android App/FoxMapNative_1/app/src/main/cpp/: CMakeLists - копия.txt  CMakeLists.txt  DataBase.h  Log.cpp  Log.h  MapDrawer.cpp  MapDrawer.h  MapItem.cpp  MapItem.h  MapItemsStorage.cpp  MapItemsStorage.h  NativeDispatcher.cpp  NativeDispatcher.h  NativeDispatcher1.cpp  NativeeTest.cpp  OpenGLStorage.cpp  OpenGLStorage.h  Point.cpp  Point.h  Project1.vcxproj  Project1.vcxproj.filters  ShaderMaster.cpp  ShaderMaster.h  ShaderProgram.h  config.h  fragment_shader.glsl  map.txt  map_drawer.cpp  map_guide.cpp  native-lib.cpp  vertex_shader.glsl
Android App/FoxMapNative_1/app/src/main/cpp/Database/: CMakeLists.txt  DBMaster.cpp  DataBase.cpp  DataBase.h  Entity.h
Android App/FoxMapNative_1/app/src/main/cpp/Database/sqlite_lib/: CMakeLists.txt  sqlite3.h.bak  sqlite3ndk.cpp  sqlite3ndk.h
Android App/FoxMapNative_1/app/src/main/cpp/FoxUtilites/: CMakeLists.txt  Log.cpp  Log.h  Point.cpp  Point.h
Android App/FoxMapNative_1/app/src/main/cpp/Graphics/: CMakeLists.txt  MapDrawer.cpp  MapDrawer.h  MapItem.cpp  MapItem.h  MapItemsStorage.cpp  MapItemsStorage.h  OpenGLStorage.cpp  OpenGLStorage.h  ShaderMaster.cpp  ShaderMaster.h  ShaderProgram.cpp  ShaderProgram.h  Visitor.h  map_drawer.cpp
Android App/FoxMapNative_1/app/src/main/cpp/RouteSearch/: CMakeLists.txt  CMatrixGraph.cpp  CMatrixGraph.h  DijkstrasAlgorithm.cpp  Dijkstra’s algorithm.vcxproj.filters  GraphConstructor.cpp  GraphConstructor.h  RouteSearch.cpp  RouteSearch.h  main.cpp
Android App/FoxMapNative_1/databases/: MapDB.db
Android App/FoxMapNative_1/gradle/wrapper/: gradle-wrapper.properties
Android App/Maps/: big_map_3.ai  big_map_3.txt  big_map_4.ai  map-rect-pass.ai  map-rect-pass.txt  map.txt  map3.txt  map4.txt  parcer.py  parcer2.py  parcer3.py  parcer4.py  test_map_decoded.txt  test_map_mini.ai  test_map_mini.dwg
Android App/OpenGL-Tests/: Project1.sln
Android App/OpenGL-Tests/Debug/: Project1.ilk
Android App/OpenGL-Tests/Project1/: DataBase.cpp  DataBase.h  Log.cpp  Log.h  MapDrawer.cpp  MapDrawer.h  MapItem.cpp  MapItem.h  MapItemsStorage.cpp  MapItemsStorage.h  OpenGLStorage.cpp  OpenGLStorage.h  Point.h  Project1.vcxproj  Project1.vcxproj.filters  ShaderMaster.cpp  ShaderMaster.h  ShaderProgram.cpp  ShaderProgram.h  Visitor.h  fragment_shader.glsl  main.cpp  map.txt  map.txt.bak  map_drawer.cpp  native-lib.cpp  vertex_shader.glsl
Android App/OpenGL-Tests/Project1/Debug/: main.obj.enc  mapdrawer.obj.enc  vc141.idb
Android App/OpenGL-Tests/Project1/Debug/Project1.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Project1.lastbuildstate  (+3 more)
C++Server/: CMakeLists.txt  DBMaster.h  Entity.h  Server.cpp  Server.h  main.cpp
Dijkstra’s algorithm/: DijkstrasAlgorithm.h  Dijkstra’s algorithm.sln  Dijkstra’s algorithm.vcxproj  Dijkstra’s algorithm.vcxproj.filters  Entity.h  GraphConstructor.cpp  GraphConstructor.h  RouteSearch.cpp
Dijkstra’s algorithm/Debug/: Dijkstra’s algorithm.ilk
Dijkstra’s algorithm/Debug/Dijkstra.6F162EAD.tlog/: CL.read.1.tlog
Dijkstra’s algorithm/Dijkstra’s algorithm/: CMatrixGraph.cpp  CMatrixGraph.h  ClassDiagram.cd  DBMaster.cpp  DBMaster.h  DijkstrasAlgorithm.cpp  DijkstrasAlgorithm.h  Dijkstra’s algorithm.vcxproj  Dijkstra’s algorithm.vcxproj.filters  Entity.h  GraphConstructor.cpp  GraphConstructor.h  IGraph.h  RouteSearch.cpp  RouteSearch.h  main.cpp
Dijkstra’s algorithm/Dijkstra’s algorithm/Debug/Dijkstra.6F162EAD.tlog/: CL.command.1.tlog  CL.write.1.tlog  Dijkstra’s algorithm.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Dijkstra’s algorithm/Dijkstra’s algorithm/Dijkstra’s algorithm/: DBMaster.h
Dijkstra’s algorithm/Dijkstra’s algorithm/Dijkstra’s algorithm/Debug/: Dijkstra’s algorithm.pch  vc141.idb
Dijkstra’s algorithm/Dijkstra’s algorithm/sqlite_lib/: MapDB.db  sqlite3.h
Dijkstra’s algorithm/Dijkstra’s algorithm/x64/Debug/: Dijkstra’s algorithm.pch  Dijkstra’s algorithm.pchast  cmatrixgraph.nativecodeanalysis.xml  dbmaster.nativecodeanalysis.xml  dbmaster.obj.enc  main.nativecodeanalysis.xml  shell.nativecodeanalysis.xml  sqlite3.nativecodeanalysis.xml  vc.nativecodeanalysis.all.xml  vc141.idb  vc142.idb
Dijkstra’s algorithm/x64/Debug/: Dijkstra’s algorithm.ilk
JavaClient/src/: client.java
Server c++ ~ Client JAVA/: Server.cpp  client.java
TestNetClient_Java/app/: build.gradle
TestNetClient_Java/app/src/main/: AndroidManifest.xml
TestNetClient_Java/gradle/wrapper/: gradle-wrapper.properties
(+65 files in other folders)
